<resources>
    <string name="app_name">Bookbook</string>
    <string name="label_username">Username</string>
    <string name="no_comments">No comments so far...</string>
    <string name="favorite_books">Favorite Books</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="wishlist">Wish List</string>
    <string name="back">Voltar</string>
    <string name="comentar">Comement</string>
    <string name="fazer_um_coment_rio">Make a comment</string>
    <string name="fa_a_um_coment_rio">Make a comment</string>
</resources>
