<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fazer_um_coment_rio"
        android:labelFor="@+id/comment"
        android:text="@string/comentar"
        app:layout_constraintBottom_toTopOf="@+id/comment"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/fa_a_um_coment_rio"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/messageSend"
        android:layout_width="136dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="67dp"
        android:text="Comentar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintBottom_toTopOf="@+id/comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/messageCancel"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="62dp"
        android:text="@string/back"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toTopOf="@+id/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>